add bug fix for chart not deploying if nfs is disabled

--- a/charts/sonarr/templates/deployment.yaml
+++ b/charts/sonarr/templates/deployment.yaml
@@ -41,12 +41,14 @@ spec:
           - configMapRef:
               name: {{ .Values.configMap.name }}
           volumeMounts:
+          {{- if .Values.persistence.nfs_enabled }}
           - name: {{ .Values.persistence.config.name }}
             mountPath: /config
           - name: {{ .Values.persistence.tv_nfs.name }}
             mountPath: /tv
           - name: {{ .Values.persistence.downloads_nfs.name }}
             mountPath: /downloads
+          {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
