--- a/charts/sonarr/templates/deployment.yaml
+++ b/charts/sonarr/templates/deployment.yaml
@@ -27,6 +27,9 @@ spec:
       serviceAccountName: {{ include "sonarr.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.dnsConfig }}
+      dnsConfig: {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -41,9 +44,11 @@ spec:
           - configMapRef:
               name: {{ .Values.configMap.name }}
           volumeMounts:
-          {{- if .Values.persistence.nfs_enabled }}
+          {{- if .Values.persistence.config_enabled }}
           - name: {{ .Values.persistence.config.name }}
             mountPath: /config
+          {{- end }}
+          {{- if .Values.persistence.nfs_enabled }}
           - name: {{ .Values.persistence.tv_nfs.name }}
             mountPath: /tv
           - name: {{ .Values.persistence.downloads_nfs.name }}
@@ -52,9 +57,11 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
+      {{- if .Values.persistence.config_enabled }}
       - name: {{ .Values.persistence.config.name }}
         persistentVolumeClaim:
           claimName: {{ .Values.persistence.claimName }}
+      {{- end }}
       {{- if .Values.persistence.nfs_enabled }}
       - name: {{ .Values.persistence.tv_nfs.name }}
         nfs: {{- toYaml .Values.persistence.tv_nfs.nfs | nindent 10 }}
