--- a/charts/sonarr/values.yaml
+++ b/charts/sonarr/values.yaml
@@ -42,7 +42,7 @@ service:
   port: 80
 
 ingress:
-  enabled: true 
+  enabled: false 
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -82,6 +82,11 @@ tolerations: []
 
 affinity: {}
 
+dnsConfig:
+  options:
+  - name: ndots
+    value: "0"
+
 configMap:
   name: sonarr-configmap
   env:
@@ -92,6 +97,7 @@ configMap:
 persistence:
   claimName: sonarr-pvc
   storageClassName: openebs-hostpath
+  config_enabled: false
   nfs_enabled: false
   # set volumeName to reclaim a persistent volume
   volumeName:
