--- a/charts/radarr/values.yaml
+++ b/charts/radarr/values.yaml
@@ -42,7 +42,7 @@ service:
   port: 80
 
 ingress:
-  enabled: true 
+  enabled: false 
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -81,6 +81,11 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+dnsConfig:
+  options:
+  - name: ndots
+    value: "0"
 
 configMap:
   name: radarr-configmap
