--- a/charts/onn/values.yaml
+++ b/charts/onn/values.yaml
@@ -50,6 +50,9 @@ securityContext:
   # runAsUser: 1000
 
 service:
+  type: ClusterIP
+  port: 80
+
   nzbget:
     serviceName: nzbget-svc
     type: ClusterIP
@@ -62,7 +65,7 @@ service:
     portName: nzbhydra-port
 
 ingress:
-  enabled: true
+  enabled: false
   className: "nginx"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
@@ -116,6 +119,11 @@ tolerations: []
 
 affinity: {}
 
+dnsConfig:
+  options:
+  - name: ndots
+    value: "0"
+
 configMap:
   gluetun:
     data:
@@ -153,8 +161,8 @@ secret:
       OPENVPN_PASSWORD:
 
 persistence:
-  config_enabled: False
-  nfs_enabled: False
+  config_enabled: false
+  nfs_enabled: false
   storageClassName: "openebs-hostpath"
   nfs:
     server:
