--- a/charts/readarr/templates/configmap.yaml
+++ b/charts/readarr/templates/configmap.yaml
@@ -2,9 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name:  {{ .Values.configMap.name }}
-  labels: {{- include "readarr.labels" . | nindent 4}}
-data:
-  env.PUID: "{{ .Values.configMap.env.PUID }}"
-  env.PGID: "{{ .Values.configMap.env.PGID }}"
-  env.TZ: {{ .Values.configMap.env.TZ }}
+  labels: {{- include "readarr.labels" . | nindent 4 }}
+data: {{- toYaml .Values.configMap.data | nindent 4 }}
 
