--- a/charts/readarr/values.yaml
+++ b/charts/readarr/values.yaml
@@ -89,7 +89,7 @@ dnsConfig:
 
 configMap:
   name: readarr-configmap
-  env:
+  data:
     PUID: "1000"
     PGID: "1000"
     TZ: "America/New_York"
