--- a/charts/hedgedoc/charts/postgres/templates/deployment.yaml
+++ b/charts/hedgedoc/charts/postgres/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "hedgedoc.fullname" . }}
+  name: {{ include "postgres.fullname" . }}
   labels:
-    {{- include "hedgedoc.labels" . | nindent 4 }}
+    {{- include "postgres.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "hedgedoc.selectorLabels" . | nindent 6 }}
+      {{- include "postgres.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,44 +18,51 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "hedgedoc.selectorLabels" . | nindent 8 }}
+        {{- include "postgres.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "hedgedoc.serviceAccountName" . }}
+      serviceAccountName: {{ include "postgres.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          securityContext: {{- toYaml .Values.securityContext | nindent 12 }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           image: '{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}'
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: {{ .Values.service.portName }}
-              containerPort: 3000 
+            - name: postgres-port
+              containerPort: 5432
               protocol: TCP
           envFrom:
           - configMapRef:
               name: {{ .Values.configMap.name }}
+          - secretRef:
+              name: {{ .Values.secret.name }}
           {{- if .Values.persistence.nfs_enabled }}
           volumeMounts:
           - name: {{ .Values.persistence.nfs_name }}
-            mountPath: /hedgedoc/public/uploads
+            mountPath: /var/lib/postgresql/data
           {{- end }}
-          resources: {{- toYaml .Values.resources | nindent 12 }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
       {{- if .Values.persistence.nfs_enabled }}
       volumes:
       - name: {{ .Values.persistence.nfs_name }}
         nfs: {{- toYaml .Values.persistence.nfs | nindent 10 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
-      nodeSelector: {{- toYaml . | nindent 8 }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.affinity }}
-      affinity: {{- toYaml . | nindent 8 }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
-      tolerations: {{- toYaml . | nindent 8 }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
       {{- end }}
