--- a/charts/hedgedoc/charts/postgres/templates/secret.yaml
+++ b/charts/hedgedoc/charts/postgres/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name:  {{ .Values.secret.db.name }}
+  name:  {{ .Values.secret.name }}
   labels: {{- include "hedgedoc.labels" . | nindent 4 }}
-data: {{- toYaml .Values.secret.db.data | nindent 4 }}
+data: {{- toYaml .Values.secret.data | nindent 4 }}
 type: Opaque
