--- a/charts/hedgedoc/templates/configmap.yaml
+++ b/charts/hedgedoc/templates/configmap.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  {{ .Values.configMap.db.name }}
+  name:  {{ .Values.configMap.name }}
   labels: {{- include "hedgedoc.labels" . | nindent 4 }}
-data: {{- toYaml .Values.configMap.db.data | nindent 4 }}
+data: {{- toYaml .Values.configMap.data | nindent 4 }}
+
 
